--- a/Đồ Án OOP/Đồ Án OOP/Đồ Án OOP.csproj
+++ b/Đồ Án OOP/Đồ Án OOP/Đồ Án OOP.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="DauSi.cs" />
     <Compile Include="DoDon.cs" />
+    <Compile Include="GenericSwap.cs" />
     <Compile Include="IKyNang.cs" />
     <Compile Include="INhanVat.cs" />
     <Compile Include="ITrangBi.cs" />
